# text2sql

./: .gitignore  README.md  build_db.py  chat.py  league_players.db  main.py  pyproject.toml
