[project]
name = "llmp"
version = "0.1.0"
description = "A ReAct LLM agent for querying databases with natural language"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-ollama",
    "langchain-community",
    "langgraph",
    "streamlit",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary"]
mysql = ["mysql-connector-python"]
mssql = ["pyodbc"]
